--- a/lib/f451_web/templates/author/form.html.heex
+++ b/lib/f451_web/templates/author/form.html.heex
@@ -13,9 +13,9 @@
   <%= text_input f, :first_name %>
   <%= error_tag f, :first_name %>
 
-  <%= label f, :country %>
-  <%= text_input f, :country %>
-  <%= error_tag f, :country %>
+  <%= label f, :country_id %>
+  <%= select f, :country_id, @countries |> Enum.map(&{&1.name, &1.id}) %>
+  <%= error_tag f, :country_id %>
 
   <%= label f, :birthdate %>
   <%= date_select f, :birthdate, year: [options: 1800..(Date.utc_today()).year] %>
