fix(authors): finishes insert with Countries association

--- a/lib/f451_web/templates/author/show.html.heex
+++ b/lib/f451_web/templates/author/show.html.heex
@@ -14,7 +14,7 @@
 
   <li>
     <strong>Country:</strong>
-    <%= @author.country %>
+    <%= @author.country && @author.country.name %>
   </li>
 
   <li>
