--- a/lib/f451_web/templates/author/form.html.heex
+++ b/lib/f451_web/templates/author/form.html.heex
@@ -1,4 +1,4 @@
-<.form let={f} for={@changeset} action={@action}>
+<.form let={f} for={@changeset} action={@action} multipart={true} >
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -26,7 +26,7 @@
   <%= error_tag f, :death_date %>
 
   <%= label f, :avatar %>
-  <%= text_input f, :avatar %>
+  <%= file_input f, :avatar %>
   <%= error_tag f, :avatar %>
 
   <%= label f, :biography %>
