--- a/lib/f451_web/templates/author/index.html.heex
+++ b/lib/f451_web/templates/author/index.html.heex
@@ -19,7 +19,7 @@
     <tr>
       <td><%= author.last_name %></td>
       <td><%= author.first_name %></td>
-      <td><%= author.country && author.country.name %></td>
+      <td><%= author.country.name %></td>
       <td><%= author.birthdate %></td>
       <td><%= author.death_date %></td>
       <td><%= author.avatar %></td>
