feat(authors_avatars): validates authors avatars in Authors schema and displays them in templates

--- a/lib/f451_web/templates/author/show.html.heex
+++ b/lib/f451_web/templates/author/show.html.heex
@@ -29,7 +29,7 @@
 
   <li>
     <strong>Avatar:</strong>
-    <%= @author.avatar %>
+    <%= img_tag F451.AuthorsAvatar.url({@author.avatar, @author}, signed: true) %>
   </li>
 
   <li>
