--- a/lib/f451_web/templates/author/index.html.heex
+++ b/lib/f451_web/templates/author/index.html.heex
@@ -22,7 +22,7 @@
       <td><%= author.country.name %></td>
       <td><%= author.birthdate %></td>
       <td><%= author.death_date %></td>
-      <td><%= author.avatar %></td>
+      <td><%= img_tag F451.AuthorsAvatar.url({author.avatar, author}, signed: true) %></td>
       <td><%= author.biography %></td>
 
       <td>
