feat(nav): adds small navigation

--- a/lib/f451_web/templates/author/index.html.heex
+++ b/lib/f451_web/templates/author/index.html.heex
@@ -36,3 +36,4 @@
 </table>
 
 <span><%= link "New Author", to: Routes.author_path(@conn, :new) %></span>
+<span><%= link "Countries settings", to: Routes.country_path(@conn, :index) %></span>
