--- a/lib/f451_web/templates/country/index.html.heex
+++ b/lib/f451_web/templates/country/index.html.heex
@@ -24,3 +24,4 @@
 </table>
 
 <span><%= link "New Country", to: Routes.country_path(@conn, :new) %></span>
+<span><%= link "Back to Authors", to: Routes.author_path(@conn, :index) %></span>
