--- a/lib/f451_web/templates/layout/root.html.heex
+++ b/lib/f451_web/templates/layout/root.html.heex
@@ -14,10 +14,10 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <li><%= link "Auteurs", to: Routes.author_path(@conn, :index) %></li>
+            <%# if function_exported?(Routes, :live_dashboard_path, 2) do %>
+              <%# link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %>
+            <%# end %>
           </ul>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
