--- a/lib/f451_web/templates/layout/root.html.heex
+++ b/lib/f451_web/templates/layout/root.html.heex
@@ -15,6 +15,7 @@
         <nav>
           <ul>
             <li><%= link "Auteurs", to: Routes.author_path(@conn, :index) %></li>
+            <li><%= link "Lecteurs", to: Routes.reader_path(@conn, :index) %></li>
             <%# if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <%# link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %>
             <%# end %>
