feat(books): adds associations to controller
Associations are only added to new, create, edit and update functions. Also adds associations select inputs to form template

--- a/lib/f451_web/templates/layout/root.html.heex
+++ b/lib/f451_web/templates/layout/root.html.heex
@@ -14,6 +14,7 @@
       <section class="container">
         <nav>
           <ul>
+            <li><%= link "Livres", to: Routes.book_path(@conn, :index) %></li>
             <li><%= link "Auteurs", to: Routes.author_path(@conn, :index) %></li>
             <li><%= link "Lecteurs", to: Routes.reader_path(@conn, :index) %></li>
             <%# if function_exported?(Routes, :live_dashboard_path, 2) do %>
