--- a/lib/f451_web/templates/book/form.html.heex
+++ b/lib/f451_web/templates/book/form.html.heex
@@ -9,13 +9,21 @@
   <%= text_input f, :title %>
   <%= error_tag f, :title %>
 
-  <%= label f, :file %>
-  <%= text_input f, :file %>
-  <%= error_tag f, :file %>
-
   <%= label f, :date %>
-  <%= date_select f, :date %>
+  <%= date_select f, :date, year: [options: 1800..(Date.utc_today()).year] %>
   <%= error_tag f, :date %>
+
+  <%= label f, :genre_id %>
+  <%= select f, :genre_id, @genres |> Enum.map(&{&1.name, &1.id}) %>
+  <%= error_tag f, :genre_id %>
+
+  <%= label f, :author_id %>
+  <%= select f, :author_id, @authors |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}) %>
+  <%= error_tag f, :author_id %>
+
+  <%= label f, :reader_id %>
+  <%= select f, :reader_id, @readers |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}) %>
+  <%= error_tag f, :reader_id %>
 
   <%= label f, :cover %>
   <%= text_input f, :cover %>
@@ -24,6 +32,10 @@
   <%= label f, :synopsis %>
   <%= textarea f, :synopsis %>
   <%= error_tag f, :synopsis %>
+
+  <%= label f, :file %>
+  <%= text_input f, :file %>
+  <%= error_tag f, :file %>
 
   <div>
     <%= submit "Save" %>
