--- a/lib/f451_web/templates/book/index.html.heex
+++ b/lib/f451_web/templates/book/index.html.heex
@@ -32,3 +32,4 @@
 </table>
 
 <span><%= link "New Book", to: Routes.book_path(@conn, :new) %></span>
+<span><%= link "Genres settings", to: Routes.genre_path(@conn, :index) %></span>
