--- a/lib/f451_web/templates/genre/index.html.heex
+++ b/lib/f451_web/templates/genre/index.html.heex
@@ -24,3 +24,4 @@
 </table>
 
 <span><%= link "New Genre", to: Routes.genre_path(@conn, :new) %></span>
+<span><%= link "Back to Books", to: Routes.book_path(@conn, :index) %></span>
