feat(books): finishes associations in templates and controller
- Preload for the get function
- Displays associated data in index and show
- adds associations field to cast

--- a/lib/f451_web/templates/book/form.html.heex
+++ b/lib/f451_web/templates/book/form.html.heex
@@ -14,15 +14,15 @@
   <%= error_tag f, :date %>
 
   <%= label f, :genre_id %>
-  <%= select f, :genre_id, @genres |> Enum.map(&{&1.name, &1.id}) %>
+  <%= select f, :genre_id, @genres |> Enum.map(&{&1.name, &1.id}), prompt: "" %>
   <%= error_tag f, :genre_id %>
 
   <%= label f, :author_id %>
-  <%= select f, :author_id, @authors |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}) %>
+  <%= select f, :author_id, @authors |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}), prompt: "" %>
   <%= error_tag f, :author_id %>
 
   <%= label f, :reader_id %>
-  <%= select f, :reader_id, @readers |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}) %>
+  <%= select f, :reader_id, @readers |> Enum.map(&{&1.first_name <> " " <> &1.last_name, &1.id}), prompt: "" %>
   <%= error_tag f, :reader_id %>
 
   <%= label f, :cover %>
