feat(books): enables uploads for book covers and book audio files + renames author_avatars and reader_avatars uploaders

--- a/lib/f451_web/templates/author/show.html.heex
+++ b/lib/f451_web/templates/author/show.html.heex
@@ -29,7 +29,7 @@
 
   <li>
     <strong>Avatar:</strong>
-    <%= img_tag F451.AuthorsAvatar.url({@author.avatar, @author}, signed: true) %>
+    <%= img_tag F451.AuthorAvatars.url({@author.avatar, @author}, signed: true) %>
   </li>
 
   <li>
