--- a/lib/f451_web/templates/reader/show.html.heex
+++ b/lib/f451_web/templates/reader/show.html.heex
@@ -19,7 +19,7 @@
 
   <li>
     <strong>Avatar:</strong>
-    <%= img_tag F451.ReadersAvatar.url({@reader.avatar, @reader}, signed: true) %>
+    <%= img_tag F451.ReaderAvatars.url({@reader.avatar, @reader}, signed: true) %>
   </li>
 
 </ul>
