--- a/lib/f451_web/templates/book/form.html.heex
+++ b/lib/f451_web/templates/book/form.html.heex
@@ -1,4 +1,4 @@
-<.form let={f} for={@changeset} action={@action}>
+<.form let={f} for={@changeset} action={@action} multipart={true}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -26,7 +26,7 @@
   <%= error_tag f, :reader_id %>
 
   <%= label f, :cover %>
-  <%= text_input f, :cover %>
+  <%= file_input f, :cover %>
   <%= error_tag f, :cover %>
 
   <%= label f, :synopsis %>
@@ -34,7 +34,7 @@
   <%= error_tag f, :synopsis %>
 
   <%= label f, :file %>
-  <%= text_input f, :file %>
+  <%= file_input f, :file %>
   <%= error_tag f, :file %>
 
   <div>
