--- a/lib/f451_web/templates/book/index.html.heex
+++ b/lib/f451_web/templates/book/index.html.heex
@@ -11,7 +11,6 @@
       <th>Date</th>
       <th>Lecteur</th>
       <th>Synopsis</th>
-      <th>File</th>
 
       <th></th>
     </tr>
@@ -19,7 +18,7 @@
   <tbody>
 <%= for book <- @books do %>
     <tr>
-      <td><%= book.cover %></td>
+      <td><%= img_tag F451.BookCovers.url({book.cover, book}, signed: true) %></td>
       <td><%= book.title %></td>
       <td><%= book.author.first_name %> <%= book.author.last_name %></td>
       <td><%= book.author.country.name %></td>
@@ -31,7 +30,6 @@
         <% end %>
       </td>
       <td><%= book.synopsis %></td>
-      <td><%= book.file %></td>
 
       <td>
         <span><%= link "Show", to: Routes.book_path(@conn, :show, book) %></span>
