feat(books): configure Plug.Parsers and displays audio player - Plug.Parsers now accepts 20MB uploads - Displays player in Books show

--- a/lib/f451_web/templates/book/show.html.heex
+++ b/lib/f451_web/templates/book/show.html.heex
@@ -45,7 +45,11 @@
 
   <li>
     <strong>File:</strong>
-    <%# @book.file %>
+    <%= if @book.file do %>
+      <%= tag "audio", src: F451.BookAudioFiles.url({@book.file, @book}, signed: true), controls: true %>
+    <% else %>
+      <p>Le fichier son de <i><%= @book.title %></i> par <%= @book.author.first_name %> <%= @book.author.last_name %> n'est pas encore disponible.</p>
+    <% end %>
   </li>
 </ul>
 
