--- a/lib/f451_web/templates/book/show.html.heex
+++ b/lib/f451_web/templates/book/show.html.heex
@@ -13,17 +13,17 @@
 
   <li>
     <strong>Auteur:</strong>
-    <%= @book.author.first_name %> <%= @book.author.last_name %>
+    <%= link "#{@book.author.first_name} #{@book.author.last_name}", to: Routes.author_path(@conn, :show, @book.author.id) %>
   </li>
 
   <li>
     <strong>Pays:</strong>
-    <%= @book.author.country.name %>
+    <%= link "#{@book.author.country.name}", to: Routes.country_path(@conn, :show, @book.author.country.id) %>
   </li>
 
   <li>
     <strong>Genre:</strong>
-    <%= @book.genre.name %>
+    <%= link "#{@book.genre.name}", to: Routes.genre_path(@conn, :show, @book.genre.id) %>
   </li>
 
   <li>
@@ -34,7 +34,7 @@
   <li>
     <strong>Lecteur:</strong>
       <%= if @book.reader do %>
-        <%= @book.reader.first_name %> <%= @book.reader.last_name %>
+        <%= link(@book.reader.last_name != "N.A." && "#{@book.reader.first_name} #{@book.reader.last_name}" || "#{@book.reader.pseudo}", to: Routes.reader_path(@conn, :show, @book.reader.id)) %>
       <% end %>
   </li>
 
